--- a/.github/workflows/auto-close-completed-issues.yml
+++ b/.github/workflows/auto-close-completed-issues.yml
@@ -1,22 +1,22 @@
-name: Auto-close completed issues
+name: Auto Close Completed Issues
 
 on:
   issues:
-    types: [labeled]
+    types:
+      - labeled
 
 jobs:
-  auto-close-completed:
-    runs-on: ubuntu-latest
+  close-completed-issues:
     if: github.event.label.name == 'completed'
+    runs-on: ubuntu-latest
     steps:
-      - name: Close completed issue
+      - name: Close Issue
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.update({
-              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
+              issue_number: context.issue.number,
               state: 'closed'
-            })
+            });
